# sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
integrations/: __init__.py  crewai_plugin.py  haystack_plugin.py  langchain_callback.py  litellm_plugin.py  openai_agents_plugin.py  portkey_plugin.py
tests/: test_sdk.py
veratum/: __init__.py  bias.py  buffer.py  chain.py  crosswalk.py  evidence.py  exports.py  instrument.py  merkle.py  pipeline.py  presets.py  privacy.py  providers.py  quick.py  receipt.py  signing.py  tiers.py  transparency.py  validation.py  verify.py
veratum/compliance/: __init__.py  bias.py  crosswalk.py  dpia.py  prevention.py  report_generator.py  validation.py
veratum/core/: __init__.py  agent_session.py  buffer.py  evidence.py  instrument.py  receipt.py  sdk.py  tiers.py
veratum/crypto/: __init__.py  bitcoin_anchor.py  chain.py  dual_signing.py  merkle.py  opentimestamps.py  signing.py  transparency.py  verify.py
veratum/future/: __init__.py  cost_controls.py  shadow_ai.py  threat_detection.py  zk.py
veratum/integrations/: __init__.py
veratum/observability/: __init__.py
veratum/security/: __init__.py  privacy.py  prompt_guard.py
verifier/: LICENSE  README.md  pyproject.toml  setup.py
verifier/tests/: __init__.py  test_verify.py
verifier/veratum_verify/: __init__.py  cli.py  core.py
